--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6162,13 +6162,13 @@ h1 {
 }
 
 .bg-firts-banner {
-  background-image: url("../images/imagen1.png");
+  background-image: url("../images/spot-transaccional-colsubsidio.jpg");
   background-repeat: no-repeat;
   height: 760px;
 }
 
 .bg-second-banner {
-  background-image: url("../images/imagen2.png");
+  background-image: url("../images/banner-portal-transaccional-colsubsidio-paga-tus-productos.jpg");
   background-repeat: no-repeat;
   height: 760px;
 }
